--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -8,8 +8,42 @@
     <h1>Here's your outfit!</h1>
     <!--<img src="https://www.lulus.com/images/product/xlarge/3127740_265042.jpg"/>-->
     <!--<a href="https://www.lulus.com/products/sway-girl-sway-black-swing-dress/265042.html"/>-->
-    <%=@result_stuff%>
+    <h1><%=@result_1%></h1>
+    <a href=<%=@result_2%> class="link">buy the dress</a>
+    <img src=<%=@result_3%> width=50% height=50% class="image">
+    <h1><%=@result_4%></h1>
+    <a href=<%=@result_5%>></a>
+    <img src=<%=@result_6%>>
+    
   </body>
+  <style>
+    .header {
+      font-family: impact;
+      color: pink;
+      text-align: center;
+      font-size: 500%;
+      background-color: white; 
+      width: 45%;
+      border-radius: 10px 100px / 120px;
+      margin: auto;
+    }
+    .image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;;
+    }
+    .link {
+      display: block;
+      text-align: center;
+      font-size: 250%;
+      background-color: white;
+      width: 45%;
+      margin: auto;
+    }
   
+    body {
+      background-image: url(https://media.giphy.com/media/XpfAcjOxMDjkQ/giphy.gif);
+    }
+  </style>
   
 </html>
