our final app :)

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,8 +14,9 @@
     <br>
   <br>
   <h4 class= "about">ABOUT KWK:</h4>
-    <div class="description"> Klothes with Klossy allows women to find the perfect outfit for an upcoming event while lessening the time it takes to shop. We enjoy giving you stylish ideas based on your specific requests. So, take this survey and we will make outfit combinations for you.  
-    </div>
+    <pre class="description">                      Klothes with Klossy allows women to find the perfect outfit for an upcoming event while lessening the time it takes to shop.
+             We enjoy giving you stylish ideas based on your specific requests. So, take this survey and we will make outfit combinations for you.  
+    </pre>
   <form method=POST class="questions">
     <br>
      <p class= "title"> What is the occasion? </p>
@@ -85,6 +86,7 @@
       color: grey;
       font-size: 200%;
       font-family: Palatino;
+      text-align: center;
     
     }
     .description {
