--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -5,11 +5,13 @@
     <title>Your Outfit</title>
   </head>
   <body>
-    <h1>Here's your outfit!</h1>
+    <h1 class= "header">Here's your outfit!</h1>
+    <br>
     <!--<img src="https://www.lulus.com/images/product/xlarge/3127740_265042.jpg"/>-->
     <!--<a href="https://www.lulus.com/products/sway-girl-sway-black-swing-dress/265042.html"/>-->
-    <h1><%=@result_1%></h1>
-    <a href=<%=@result_2%> class="link">buy the dress</a>
+    <!--<h1><%=@result_1%></h1>-->
+    <a href=<%=@result_2%> class="link">Buy this <%=@result_1%></a>
+    <br>
     <img src=<%=@result_3%> width=50% height=50% class="image">
     <h1><%=@result_4%></h1>
     <a href=<%=@result_5%>></a>
@@ -42,7 +44,7 @@
     }
   
     body {
-      background-image: url(https://media.giphy.com/media/XpfAcjOxMDjkQ/giphy.gif);
+      background-image: url(https://media.giphy.com/media/Jqhdu287LqguY/giphy.gif);
     }
   </style>
   
