--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -16,7 +16,9 @@
     <h1><%=@result_4%></h1>
     <a href=<%=@result_5%>></a>
     <img src=<%=@result_6%>>
-    
+    <h1 class= "header">Thank you for shopping with us!</h1>
+    <br>
+    <br>
   </body>
   <style>
     .header {
